# kenshi-mp

./: .gitignore  CMakeLists.txt  Makefile
common/: CMakeLists.txt
common/include/: packets.h  protocol.h  serialization.h
core/: CMakeLists.txt
core/src/: admin_panel.cpp  building_manager.cpp  building_sync.cpp  char_editor.cpp  char_editor.h  client.cpp  client_identity.cpp  client_identity.h  game_hooks.cpp  host_sync.cpp  joiner_runtime.cpp  joiner_runtime.h  joiner_runtime_glue.cpp  joiner_runtime_glue.h  kmp_log.h  load_trigger.cpp  load_trigger.h  npc_manager.cpp  player_sync.cpp  plugin.cpp  re_tools.cpp  re_tools.h  save_trigger.cpp  save_trigger.h  server_browser.cpp  server_browser.h  server_list.cpp  server_list.h  server_pinger.cpp  server_pinger.h  snapshot_client.cpp  snapshot_client.h  snapshot_extract.cpp  snapshot_extract.h  snapshot_uploader.cpp  snapshot_uploader.h  snapshot_uploader_glue.cpp  snapshot_uploader_glue.h  snapshot_zip.cpp  snapshot_zip.h  (+1 more)
dist-assets/: README-RELEASE.md
docs/superpowers/plans/: 2026-04-07-playable-mvp-plan.md  2026-04-08-phase1-host-npc-sync-plan.md  2026-04-08-phase2-combat-sync-plan.md  2026-04-08-v100-game-thread-plan.md  2026-04-21-host-snapshot-upload.md  2026-04-21-snapshot-server-plumbing.md  2026-04-22-joiner-runtime.md  2026-04-22-server-browser-ui.md
docs/superpowers/specs/: 2026-04-07-playable-mvp-design.md  2026-04-07-v100-game-thread-design.md  2026-04-08-phase1-host-npc-sync-design.md  2026-04-08-phase2-combat-sync-design.md  2026-04-08-phase2a-combat-stats-design.md  2026-04-21-host-snapshot-upload-design.md  2026-04-21-save-transfer-and-load-design.md  2026-04-22-joiner-runtime-design.md  2026-04-22-server-browser-ui-design.md
injector/: CMakeLists.txt
injector/src/: main.cpp
memory/: MEMORY.md  feedback_failures_log.md  feedback_no_claude_coauthor.md  project_overview.md  session_2026_04_07_08.md  session_2026_04_08.md  session_2026_04_08_afternoon.md  session_2026_04_08_late.md
plan/: 01-building-spawn-sync.md  README.md
server/: CMakeLists.txt
server/core/: CMakeLists.txt
server/core/include/: server_api.h
server/core/src/: admin.cpp  admin.h  character_store.cpp  character_store.h  core.cpp  events.cpp  events.h  http_sidecar.cpp  http_sidecar.h  posture.h  relay.cpp  server_config.cpp  server_config.h  session.cpp  session_api.h  snapshot.cpp  snapshot.h  snapshot_upload.cpp  snapshot_upload.h  spawn.cpp  spawn.h  world_state.cpp
server/gui/: App.axaml  App.axaml.cs  KenshiMP.Server.csproj  Program.cs  ViewLocator.cs  app.manifest
server/gui/Interop/: NativeMethods.cs  ServerCore.cs
server/gui/ViewModels/: ChatViewModel.cs  ConfigViewModel.cs  LogViewModel.cs  MainWindowViewModel.cs  PlayerRow.cs  PlayersViewModel.cs  PostureViewModel.cs  SpawnViewModel.cs  StatsViewModel.cs  ViewModelBase.cs
server/gui/Views/: ChatView.axaml  ChatView.axaml.cs  ConfigView.axaml  ConfigView.axaml.cs  LogView.axaml  LogView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  PlayersView.axaml  PlayersView.axaml.cs  PostureView.axaml  PostureView.axaml.cs  SpawnView.axaml  SpawnView.axaml.cs  StatsView.axaml  StatsView.axaml.cs
server/headless/: CMakeLists.txt
server/headless/src/: main.cpp
server/src/: main.cpp  relay.cpp  session.cpp
tools/: CMakeLists.txt  test_check.h  test_client.cpp  test_connect_request_password.cpp  test_http_sidecar.cpp  test_joiner_runtime.cpp  test_server_info_e2e.cpp  test_server_info_packets.cpp  test_server_list.cpp  test_server_pinger.cpp  test_snapshot_e2e.cpp  test_snapshot_extract.cpp  test_snapshot_packets.cpp  test_snapshot_store.cpp  test_snapshot_upload.cpp  test_snapshot_uploader.cpp  test_snapshot_zip.cpp
